feat(store) : 스파게티 프로그램 구현